--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -114,10 +114,11 @@ section.recent-posts {
     flex: 0 0 auto;
     overflow: hidden;
     height: 100%;
-    padding-top: 1rem;
+    margin-right: 15px;
 }
 
 .listfeaturedtag .wrapthumbnail {
+    
     align-self: center;
     max-height: 11rem;
     overflow: hidden;
@@ -254,19 +255,7 @@ span.post-read {
     color: rgba(0, 0, 0, .44);
 }
 
-span.post-read-more {
-    align-items: center;
-    display: inline-block;
-    float: right;
-    margin-top: 8px;
-}
-
-span.post-read-more a {
-    color: rgba(0, 0, 0, .44);
-}
-
-span.post-name a,
-span.post-read-more a:hover {
+span.post-name a {
     color: rgba(0, 0, 0, .8);
 }
 
@@ -792,12 +781,12 @@ iframe {
 
 @media (min-width:768px) {
     .jumbotron.fortags {
-        margin-bottom: -50px;
+        margin-bottom: 0px;
         margin-top: 3rem;
         padding: 0;
-        height: 350px;
+        height: 200px;
         border-radius: 0;
-        background-image: url(../images/jumbotron.jpg);
+        background-image: url(../images/roses.jpeg);
         background-size: cover;
     }
 
@@ -815,10 +804,11 @@ iframe {
     margin-top: 3rem;
     padding: 0;
     border-radius: 0;
-    background-image: url(../images/jumbotron.jpg);
+    background-image: url(../images/roses.jpeg);
     background-size: cover;
 }
 
+/*
 .jumbotron.fortags a {
     padding: 5px 10px 7px;
     background: #222;
@@ -829,7 +819,7 @@ iframe {
     font-size: 0.8rem;
     display: inline-block;
 }
-
+*/
 .layout-page .jumbotron.fortags {
     display: none;
 }
