--- a/_layouts/archive_year.html
+++ b/_layouts/archive_year.html
@@ -7,13 +7,13 @@ title: Archive
 ================================================== -->
 <section class="recent-posts">
 <div class="section-title">
-    <h2>Archive of posts with <span>{{ page.type }} '{{ page.title }}'</span></h2>
+    <div class ="p-2 bg-secondary text-white h5">{{ page.type | capitalize }} | {{ page.date | date: "%Y" }}</div></a>
 </div>
 <div class="row listrecent">
 
 {% for post in page.posts %}
 
-    {% include postbox.html %}
+    {% include funfeaturedbox.html %}
 
 {% endfor %}
 
