Disabled archives because of non support on github

--- a/_includes/funstorybox.html
+++ b/_includes/funstorybox.html
@@ -13,7 +13,7 @@
                                     <small class="text-primary">
                                         {{ post.date | date: '%b %d, %Y' }} |  <span class="text-muted">
                                         {% for category in post.categories %}
-                                        <a class="text-capitalize text-info smoothscroll" href="{{site.baseurl}}/categories.html#{{ category | downcase }}">{{ category }}</a><span class="pes">, </span>
+                                        <a class="text-capitalize text-info smoothscroll" href="{{site.baseurl}}/categories#{{ category | downcase }}">{{ category }}</a><span class="pes">, </span>
                                         {% endfor %}
                                         </span>
                                     </small>
