--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,10 @@
 
 {% seo %}
 
+<!-- Material Design Bootstrap -->
+<!-- Lesser precedence for md bootstrap -->
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/mdb.fun.min.css">
+
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 <!-- Font Awesome Icons -->
@@ -23,6 +27,11 @@
 <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet">
 
 <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
+
+<!-- Material Design Bootstrap -->
+<script type="text/javascript" src="{{ site.baseurl }}/assets/js/mdb.min.js"></script>
+
+
 
 </head>
 
