--- a/_includes/featuredbox.html
+++ b/_includes/featuredbox.html
@@ -9,11 +9,14 @@
                         <a href="{{ site.baseurl }}{{ post.url }}">
                             {% if site.lazyimages == "enabled" %}
                             <div class="view overlay zoom">
-                                <img class="featured-box-img-cover lazyimg"  src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAACCAQAAAA3fa6RAAAADklEQVR42mNkAANGCAUAACMAA2w/AMgAAAAASUVORK5CYII=" data-src="{% if post.image contains "://" %}{{ post.image }}{% else %}{{ site.baseurl }}/{{ post.image }}{% endif %}">
+                                <img class="featured-box-img-cover lazyimg"
+                                    src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAACCAQAAAA3fa6RAAAADklEQVR42mNkAANGCAUAACMAA2w/AMgAAAAASUVORK5CYII="
+                                    data-src="{% if post.image contains "://" %}{{ post.image }}{% else %}{{ site.baseurl }}/{{ post.image }}{% endif %}">
                             </div>
                             {% else %}
                             <div class="view overlay zoom">
-                                <img class="featured-box-img-cover" src="{% if post.image contains "://" %}{{ post.image }}{% else %}{{ site.baseurl }}/{{ post.image }}{% endif %}">
+                                <img class="featured-box-img-cover"
+                                    src="{% if post.image contains "://" %}{{ post.image }}{% else %}{{ site.baseurl }}/{{ post.image }}{% endif %}">
                             </div>
                             {% endif %}
                         </a>
@@ -34,16 +37,24 @@
                             <div class="wrapfooter">
                                 {% if post.author %}
                                 <span class="meta-footer-thumb">
-                                {% if author.avatar %}
-                                <img class="author-thumb" src="{{site.baseurl}}/{{ author.avatar }}" alt="{{ author.display_name }}">
-                                {% else %}
-                                <img class="author-thumb" src="https://www.gravatar.com/avatar/{{ author.gravatar }}?s=250&d=mm&r=x" alt="{{ author.display_name }}">
-                                {% endif %}
+                                    {% if author.avatar %}
+                                    <a href="{{ site.base_url}}/about/#author-{{ author.display_name | slugify }}">
+                                        <img class="author-thumb" src="{{site.baseurl}}/{{ author.avatar }}"
+                                            alt="{{ author.display_name }}">
+                                    </a>
+                                    {% else %}
+                                    <a href="{{ site.base_url}}/about/#author-{{ author.display_name | slugify }}">
+                                        <img class="author-thumb"
+                                            src="https://www.gravatar.com/avatar/{{ author.gravatar }}?s=250&d=mm&r=x"
+                                            alt="{{ author.display_name }}">
+                                    </a>
+                                    {% endif %}
                                 </span>
                                 <span class="author-meta">
-                                <span class="post-name"><a target="_blank" href="{{ author.web }}">{{ author.display_name }}</a></span><br/>
-                                {% endif %}
-                                <span class="post-date">{{ post.date | date_to_string }}</span>
+                                    <span class="post-name"><a target="_blank"
+                                            href="{{ author.web }}">{{ author.display_name }}</a></span><br />
+                                    {% endif %}
+                                    <span class="post-date">{{ post.date | date_to_string }}</span>
                                 </span>
                                 <div class="clearfix"></div>
                             </div>
