--- a/_includes/funfeaturedbox.html
+++ b/_includes/funfeaturedbox.html
@@ -31,9 +31,14 @@
                 {% if post.author %}
                 <span class="meta-footer-thumb">
                 {% if author.avatar %}
-                <img class="author-thumb" src="{{site.baseurl}}/{{ author.avatar }}" alt="{{ author.display_name }}">
+                <a href="{{ site.base_url}}/about/#author-{{ author.display_name | slugify }}">
+                    <img class="author-thumb" src="{{site.baseurl}}/{{ author.avatar }}" alt="{{ author.display_name }}">
+                </a>
                 {% else %}
-                <img class="author-thumb" src="https://www.gravatar.com/avatar/{{ author.gravatar }}?s=250&d=mm&r=x" alt="{{ author.display_name }}">
+                <a href="{{ site.base_url}}/about/#author-{{ author.display_name | slugify }}">
+                    <img class="author-thumb" src="https://www.gravatar.com/avatar/{{ author.gravatar }}?s=250&d=mm&r=x"
+                        alt="{{ author.display_name }}">
+                </a>
                 {% endif %}
                 </span>
                 <span class="author-meta">
