--- a/_includes/funstorybox.html
+++ b/_includes/funstorybox.html
@@ -10,11 +10,13 @@
                             <h2 class="card-title">
                                 <a class="text-dark" href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
                                 <div class="pt-1">
-                                    <small class="text-primary">
-                                        {{ post.date | date: '%b %d, %Y' }} |  <span class="text-muted">
-                                        {% for category in post.categories %}
-                                        <a class="text-capitalize text-info smoothscroll" href="{{site.baseurl}}/categories#{{ category | downcase }}">{{ category }}</a><span class="pes">, </span>
-                                        {% endfor %}
+                                    <small class="text-primary funcats">
+                                        {{ post.date | date: '%b %d, %Y' }} | <span class="text-muted">
+                                            {% for category in post.categories %}
+                                            <a class="text-capitalize text-info smoothscroll"
+                                                href="{{site.baseurl}}/categories#{{ category | downcase }}">{{ category }}</a><span
+                                                class="pes">, </span>
+                                            {% endfor %}
                                         </span>
                                     </small>
                                 </div>
@@ -26,16 +28,24 @@
                             <div class="wrapfooter">
                                 {% if post.author %}
                                 <span class="meta-footer-thumb">
-                                {% if author.avatar %}
-                                <img class="author-thumb" src="{{site.baseurl}}/{{ author.avatar }}" alt="{{ author.display_name }}">
-                                {% else %}
-                                <img class="author-thumb" src="https://www.gravatar.com/avatar/{{ author.gravatar }}?s=250&d=mm&r=x" alt="{{ author.display_name }}">
-                                {% endif %}
+                                    {% if author.avatar %}
+                                    <a href="{{ site.base_url}}/about/#author-{{ author.display_name | slugify }}">
+                                        <img class="author-thumb" src="{{site.baseurl}}/{{ author.avatar }}"
+                                            alt="{{ author.display_name }}">
+                                    </a>
+                                    {% else %}
+                                    <a href="{{ site.base_url}}/about/#author-{{ author.display_name | slugify }}">
+                                        <img class="author-thumb"
+                                            src="https://www.gravatar.com/avatar/{{ author.gravatar }}?s=250&d=mm&r=x"
+                                            alt="{{ author.display_name }}">
+                                    </a>
+                                    {% endif %}
                                 </span>
                                 <span class="author-meta">
-                                <span class="post-name"><a target="_blank" href="{{ author.web }}">{{ author.display_name }}</a></span><br/>
-                                {% endif %}
-                                <span class="post-date">{{ post.date | date_to_string }}</span>
+                                    <span class="post-name"><a target="_blank"
+                                            href="{{ author.web }}">{{ author.display_name }}</a></span><br />
+                                    {% endif %}
+                                    <span class="post-date">{{ post.date | date_to_string }}</span>
                                 </span>
                                 <div class="clearfix"></div>
                             </div>
@@ -43,26 +53,29 @@
                     </div>
                 </div>
             </div>
-            
-            
+
+
             <div class="col-12 col-md-12 col-lg-3 pr-lg-0">
                 <div class="h-100 wrapcontainer">
                     <div class="wrapthumbnail">
                         <a href="{{ site.baseurl }}{{ post.url }}">
                             {% if site.lazyimages == "enabled" %}
                             <div class="view overlay zoom">
-                                <img class="featured-box-img-cover lazyimg"  src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAACCAQAAAA3fa6RAAAADklEQVR42mNkAANGCAUAACMAA2w/AMgAAAAASUVORK5CYII=" data-src="{% if post.image contains "://" %}{{ post.image }}{% else %}{{ site.baseurl }}/{{ post.image }}{% endif %}">
+                                <img class="featured-box-img-cover lazyimg"
+                                    src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAACCAQAAAA3fa6RAAAADklEQVR42mNkAANGCAUAACMAA2w/AMgAAAAASUVORK5CYII="
+                                    data-src="{% if post.image contains "://" %}{{ post.image }}{% else %}{{ site.baseurl }}/{{ post.image }}{% endif %}">
                             </div>
                             {% else %}
                             <div class="view overlay zoom">
-                                <img class="featured-box-img-cover" src="{% if post.image contains "://" %}{{ post.image }}{% else %}{{ site.baseurl }}/{{ post.image }}{% endif %}">
+                                <img class="featured-box-img-cover"
+                                    src="{% if post.image contains "://" %}{{ post.image }}{% else %}{{ site.baseurl }}/{{ post.image }}{% endif %}">
                             </div>
                             {% endif %}
                         </a>
                     </div>
                 </div>
             </div>
-            
+
         </div>
     </div>
 </div>
