--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -5,7 +5,7 @@
     </div>
 
     <!--div class="jumbotron p-1 m-0" style="background-color: #EDE7F6;"-->
-    <div class="container-fluid">
+    <div class="container-fluid article-post">
         <img class="rounded-circle fun-img-center" src="{{ site.baseurl }}/assets/images/bala.png"
             alt="Responsive image" style="height: 25vh;">
         <div>
