--- a/_includes/otherfunisters.html
+++ b/_includes/otherfunisters.html
@@ -4,7 +4,7 @@
     <h2><span>Other Funisters</span></h2>
   </div>
 
-  <p>
+  <p class="article-post">
     There is so much to learn & so much to share.<br>
     When it comes to sharing knowledge, the more the merrier.<br>
     Here's the amazing team of funisters who would author the blogs
