--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,33 +7,36 @@ post_class: post-template
 
 <!-- Begin Article
 ================================================== -->
-<div class="container">
+<div class="container-fluid">
     <div class="row">
 
         <!-- Post Share -->
-        <div class="col-md-2 pl-0">
+        <div class="col-md-1 pl-0">
             {% include share.html %}
         </div>
 
         <!-- Post -->
         {% assign author = site.authors[page.author] %}
 
-        <div class="col-md-9 flex-first flex-md-unordered">
+        <div class="col-md-11 flex-first flex-md-unordered">
             <div class="mainheading">
 
                 <!-- Author Box -->
                 {% if page.author %}
                 <div class="row post-top-meta">
-                    <div class="col-xs-12 col-md-3 col-lg-2 text-center text-md-left mb-4 mb-md-0">
+                    <div class="col-xs-12 col-md-12 col-lg-12 text-center text-md-left mb-4 mb-md-0">
                         {% if author.avatar %}
-                        <img class="author-thumb" src="{{site.baseurl}}/{{ author.avatar }}" alt="{{ author.display_name }}">
+                        <img class="author-thumb align-middle" src="{{site.baseurl}}/{{ author.avatar }}"
+                            alt="{{ author.display_name }}">
                         {% else %}
-                        <img class="author-thumb" src="https://www.gravatar.com/avatar/{{ author.gravatar }}?s=250&d=mm&r=x" alt="{{ author.display_name }}">
+                        <img class="author-thumb align-middle"
+                            src="https://www.gravatar.com/avatar/{{ author.gravatar }}?s=250&d=mm&r=x"
+                            alt="{{ author.display_name }}">
                         {% endif %}
-                    </div>
-                    <div class="col-xs-12 col-md-9 col-lg-10 text-center text-md-left">
-                        <a target="_blank" class="link-dark" href="{{ author.web }}">{{ author.display_name }}</a><a target="_blank" href="{{ author.twitter }}" class="btn follow">Follow</a>
-                        <span class="author-description">{{ author.description }}</span>
+                        <a target="_blank" class="link-dark align-middle"
+                            href="{{ author.web }}">{{ author.display_name }}</a>
+                        <a target="_blank" href="{{ author.twitter }}" class="btn follow align-middle mb-0">Follow</a>
+                        <span class="author-description align-middle">{{ author.description }}</span>
                     </div>
                 </div>
                 {% endif %}
@@ -45,7 +48,7 @@ post_class: post-template
 
             <!-- Adsense if enabled from _config.yml (change your pub id and slot) -->
             {% if site.adsense == "enabled" %}
-                {% include adsense-under-header.html %}
+            {% include adsense-under-header.html %}
             {% endif %}
             <!-- End Adsense -->
 
@@ -53,9 +56,18 @@ post_class: post-template
             {% if page.image %}
 
             {% if site.lazyimages == "enabled" %}
-            <img class="featured-image img-fluid lazyimg" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAACCAQAAAA3fa6RAAAADklEQVR42mNkAANGCAUAACMAA2w/AMgAAAAASUVORK5CYII=" data-src="{% if page.image contains "://" %}{{ page.image }}{% else %}{{ site.baseurl }}/{{ page.image }}{% endif %}" alt="{{ page.title }}">
+            <div class="text-center">
+                <img class="featured-image img-fluid lazyimg"
+                    src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAACCAQAAAA3fa6RAAAADklEQVR42mNkAANGCAUAACMAA2w/AMgAAAAASUVORK5CYII="
+                    data-src="{% if page.image contains "://" %}{{ page.image }}{% else %}{{ site.baseurl }}/{{ page.image }}{% endif %}"
+                    alt="{{ page.title }}">
+            </div>
             {% else %}
-            <img class="featured-image img-fluid" src="{% if page.image contains "://" %}{{ page.image }}{% else %}{{ site.baseurl }}/{{ page.image }}{% endif %}" alt="{{ page.title }}">
+            <div class="text-center">
+                <img class="featured-image img-fluid"
+                    src="{% if page.image contains "://" %}{{ page.image }}{% else %}{{ site.baseurl }}/{{ page.image }}{% endif %}"
+                    alt="{{ page.title }}">
+            </div>
             {% endif %}
 
             {% endif %}
@@ -65,42 +77,38 @@ post_class: post-template
             <div class="article-post">
                 <!-- Toc if any -->
                 {% if page.toc %}
-                    {% if page.beforetoc %}
-                        <p><em>{{page.beforetoc}}</em></p>
-                    {% endif %}
-                    <div class="toc mt-4 mb-4 lead">
-                        <h3 class="font-weight-bold">Summary</h3>
-                        {% include toc.html html=content %}
-                    </div>
+                {% if page.beforetoc %}
+                <p><em>{{page.beforetoc}}</em></p>
+                {% endif %}
+                <div class="toc mt-4 mb-4 lead">
+                    <h3 class="font-weight-bold">Summary</h3>
+                    {% include toc.html html=content %}
+                </div>
                 {% endif %}
                 <!-- End Toc -->
                 {{content}}
             </div>
 
-            <!-- Rating -->
-            {% if page.rating %}
-            <div class="rating mb-4 d-flex align-items-center">
-                <strong class="mr-1">Rating:</strong> {% include star_rating.html %}
-            </div>
-            {% endif %}
-
             <!-- Post Date -->
             <p>
-            <small>
-                <span class="post-date"><time class="post-date" datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date_to_string }}</time></span>           
-                {% if page.last_modified_at %}
-                (Updated: <time datetime="{{ page.last_modified_at | date_to_xmlschema }}" itemprop="dateModified">{{ page.last_modified_at | date: "%b %-d, %Y" }}</time>)
-                {% endif %}
+                <small>
+                    <span class="post-date"><time class="post-date"
+                            datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date_to_string }}</time></span>
+                    {% if page.last_modified_at %}
+                    (Updated: <time datetime="{{ page.last_modified_at | date_to_xmlschema }}"
+                        itemprop="dateModified">{{ page.last_modified_at | date: "%b %-d, %Y" }}</time>)
+                    {% endif %}
                 </small>
             </p>
 
             <!-- Post Categories -->
             <div class="after-post-cats">
-                <ul class="tags mb-4">
+                <ul class="tags mb-2">
                     {% assign sortedCategories = page.categories | sort %}
                     {% for category in sortedCategories %}
                     <li>
-                        <a class="smoothscroll" href="{{site.baseurl}}/categories#{{ category | replace: " ","-" }}">{{ category }}</a>
+                        <a class="smoothscroll badge badge-pill badge-default"
+                            href="{{site.baseurl}}/categories#{{ category | replace: " ","-" }}">{{ category | capitalize | camelcase }}</a>
                     </li>
                     {% endfor %}
                 </ul>
@@ -113,7 +121,8 @@ post_class: post-template
                     {% assign sortedTags = page.tags | sort %}
                     {% for tag in sortedTags %}
                     <li>
-                        <a class="smoothscroll" href="{{site.baseurl}}/tags#{{ tag | replace: " ","-" }}">#{{ tag }}</a>
+                        <a class="smoothscroll badge badge-pill badge-info"
+                            href="{{site.baseurl}}/tags#{{ tag | replace: " ","-" }}">#{{ tag }}</a>
                     </li>
                     {% endfor %}
                 </ul>
@@ -122,13 +131,33 @@ post_class: post-template
 
             <!-- Prev/Next -->
             <div class="row PageNavigation d-flex justify-content-between font-weight-bold">
-            {% if page.previous.url %}
-            <a class="prev d-block col-md-6" href="{{ site.baseurl }}/{{page.previous.url}}"> &laquo; {{page.previous.title}}</a>
-            {% endif %}
-            {% if page.next.url %}
-            <a class="next d-block col-md-6 text-lg-right" href="{{ site.baseurl }}/{{page.next.url}}">{{page.next.title}} &raquo; </a>
-            {% endif %}
-            <div class="clearfix"></div>
+                <!-- Previous post link -->
+                {% if page.prev_post == "none" %}
+                <!--Add empty div-->
+                <div class="prev d-block col-md-6"></div>
+                {% elsif page.prev_post %}
+                <a class="prev d-block col-md-6" href="{{ site.baseurl }}{{page.prev_post.url}}"> &laquo;
+                    {{page.prev_post.title}}</a>
+                {% elsif page.previous.url %}
+                <a class="prev d-block col-md-6" href="{{ site.baseurl }}{{page.previous.url}}"> &laquo;
+                    {{page.previous.title}}</a>
+                {% else %}
+                <!--Add empty div-->
+                <div class="prev d-block col-md-6"></div>
+                {% endif %}
+
+                <!-- Next post link -->
+                {% if page.next_post == "none" %}
+                <!--Add empty div-->
+                <div class="prev d-block col-md-6 text-lg-right"></div>
+                {% elsif page.next_post %}
+                <a class="prev d-block col-md-6 text-lg-right"
+                    href="{{ site.baseurl }}{{page.next_post.url}}">{{page.next_post.title}} &raquo; </a>
+                {% elsif page.next.url %}
+                <a class="next d-block col-md-6 text-lg-right"
+                    href="{{ site.baseurl }}{{page.next.url}}">{{page.next.title}} &raquo; </a>
+                {% endif %}
+                <div class="clearfix"></div>
             </div>
             <!-- End Categories -->
 
@@ -142,18 +171,19 @@ post_class: post-template
 
 <!-- Begin Comments
 ================================================== -->
-{% if page.comments != false %}
-    <div class="container">
-        <div id="comments" class="row justify-content-center mb-5">
-            <div class="col-md-8">
-                {% include disqus.html %}
-            </div>
+{% if page.comments %}
+<div class="container">
+    <div id="comments" class="row justify-content-center mb-5">
+        <div class="col-md-8">
+            {% include disqus.html %}
         </div>
     </div>
+</div>
 {% endif %}
 <!--End Comments
 ================================================== -->
 
+{% comment %}
 <!-- Review with LD-JSON, adapt it for your needs if you like, but make sure you test the generated HTML source code first: 
 https://search.google.com/structured-data/testing-tool/u/0/
 ================================================== -->
@@ -179,3 +209,4 @@ https://search.google.com/structured-data/testing-tool/u/0/
 }
 </script>
 {% endif %}
+{% endcomment %}
