--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -512,10 +512,10 @@ ul.tags {
 
 ul.tags li {
     display: inline-block;
-    font-size: 0.9rem;
+    font-size: 1.3rem;
 }
 
-ul.tags li a {
+/* ul.tags li a {
     background: rgba(0, 0, 0, .05);
     color: rgba(0, 0, 0, .6);
     border-radius: 3px;
@@ -525,7 +525,7 @@ ul.tags li a {
 ul.tags li a:hover {
     background: rgba(0, 0, 0, .07);
     text-decoration: none;
-}
+} */
 
 .margtop3rem {
     margin-top: 3rem;
