--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -53,13 +53,13 @@ layout: default
           alt="Other funisters">
         <!-- This section becomes visible on hover & is optional -->
         <div class="fun-content mask flex-center">
-          <div class="fun-title white-text">Other Funisters</div>
-          <div class="fun-tag white-text">Other fun folks</div>
+          <div class="fun-title white-text">The Funisters</div>
+          <div class="fun-tag white-text">The fun folks</div>
         </div>
         <!-- This section vanishes on hover -->
         <div class="fun-content mask flex-center rgba-teal-strong">
-          <div class="fun-title white-text">Other Funisters</div>
-          <div class="fun-tag white-text">Other fun folks</div>
+          <div class="fun-title white-text">The Funisters</div>
+          <div class="fun-tag white-text">The fun folks</div>
         </div>
       </a>
     </div>
@@ -71,4 +71,4 @@ layout: default
 
 {% include aboutme.html %}
 {% include aboutblog.html %}
-{% include otherfunisters.html %}
+{% include funisters.html %}
