--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -102,7 +102,7 @@ ga('send', 'pageview');
 ================================================== -->
 <div class="mainheading">
     <h1 class="sitetitle">{{ site.name }}</h1>
-    <p class="lead">
+    <p class="lead mb-0">
         {{ site.description }}
     </p>
 </div>
