--- a/_layouts/archive_category.html
+++ b/_layouts/archive_category.html
@@ -7,7 +7,10 @@ title: Archive
 ================================================== -->
 <section class="recent-posts">
 <div class="section-title">
-    <div class ="p-2 bg-secondary text-white h5">{{ page.type | capitalize }} | {{ page.title}}</div></a>
+    {% comment %}
+    <h2><span>{{ page.type | capitalize }} | {{ page.title }}</span></h2>
+    {% endcomment %}
+    <div class ="p-2 bg-secondary text-white h5">{{ page.type | capitalize }} | {{ page.title | capitalize }}</div>
 </div>
 <div class="row listrecent">
 
