--- a/_layouts/archives.html
+++ b/_layouts/archives.html
@@ -1,47 +1,71 @@
 ---
-title: "Over the years"
+title: "Archives"
 layout: default
 permalink: "/archives.html"
 ---
 
-<div class="jumbotron fortags">
-	<div class="d-md-flex h-100">
-		<div class="col-md-4 transpdark align-self-center text-center h-100">
+{% comment %}
+{% assign years = {"2017": 0, "2018": 0, "2019": 0, "2020": 0 } %}
+{% for post in site.posts %}
+{% assign year = page.date | date: "%Y" %}
+{% assign count = years[year] %}
+{% increment count %}
+{% assign year = nil %}
+{% endfor %}
+{% endcomment %}
+
+{% assign years = "" | split: ',' %}
+{% for post in site.posts %}
+{% assign year = post.date | date: "%Y" %}
+{% unless years contains year %}
+{% assign years = years | push: year %}
+{% endunless %}
+{% assign year = nil %}
+{% endfor %}
+
+
+<div class="jumbotron fortags" style="--fortags-image: url(../images/13.jpg)">
+    <div class="d-md-flex h-100">
+        <div class="col-md-4 transpdark align-self-center text-center h-100">
             <div class="d-md-flex align-items-center justify-content-center h-100">
-                <h2 class="d-md-block align-self-center py-1 font-weight-light">Archives <span class="d-none d-md-inline">→</span></h2>
+                <h2 class="d-md-block align-self-center py-1 font-weight-light">Archives <span
+                        class="d-none d-md-inline">→</span></h2>
             </div>
-		</div>
-		<div class="col-md-8 p-5 align-self-center text-center">
-            {% assign categories_list = site.categories %}
-            {% if categories_list.first[0] == null %}
-                {% for category in categories_list %}
-                    <a class="btn btn-dark mr-1" role="button" href="{{site.baseurl}}/category/{{ category | url_escape | strip | replace: ' ', '-' }}">{{ category | capitalize }} ({{ site.tags[category].size }})</a>
-                {% endfor %}
-            {% else %}
-                {% for category in categories_list %}
-                    <a class="btn btn-dark mr-1" role="button" href="{{site.baseurl}}/category/{{ category[0] | url_escape | strip | replace: ' ', '-' }}">{{ category[0] | capitalize }} ({{ category[1].size }})</a>
-                {% endfor %}
+        </div>
+        <div class="col-md-8 p-5 align-self-center text-center">
+            {% for year in years %}
+
+            {% assign year_posts = "" | split: ',' %}
+            {% for post in site.posts %}
+            {% capture post_year %}{{post.date | date: "%Y"}}{% endcapture %}
+            {% if year == post_year %}
+                {% assign year_posts = year_posts | push: post %}
             {% endif %}
-            {% assign categories_list = nil %}
-		</div>
-	</div>
+            {% endfor %}
+            <a class="btn btn-dark mr-1" role="button"
+                href="{{site.baseurl}}tags#{{ tag | url_escape | strip | replace: ' ', '-' }}">{{ year }} ({{year_posts.size}})</a>
+            {% assign year_posts = nil %}
+            {% endfor %}
+        </div>
+    </div>
 </div>
 
 <div class="row listrecent">
-{% for category in site.categories %}
-<div class="col-md-12 mt-4">
-    <a href="{{site.baseurl}}/category/{{category[0] | url_escape | strip | replace: ' ', '-'}}">
-    <div class ="p-2 bg-info text-white h5" id="{{ category[0] | replace: ' ','-' }}">Category | {{ category[0] | capitalize }}</div></a>
-</div>
-{% assign pages_list = category[1] %}
-{% for post in pages_list %}
-{% if post.title != null %}
-{% if group == null or group == post.group %}
-{% include funstorybox.html %}
-{% endif %}
-{% endif %}
-{% endfor %}
-{% assign pages_list = nil %}
-{% assign group = nil %}
-{% endfor %}
+    {% for year in years %}
+
+    <div class="col-md-12 mt-4">
+        <a href="{{site.baseurl}}/year/{{ year }}">
+            <div class="p-2 bg-info text-white h5" id="{{ tag[0] | replace: " ","-" }}">Year |
+                <span>{{year}}</span>
+            </div>
+        </a>
+    </div>
+
+    {% for post in site.posts %}
+    {% capture post_year %}{{post.date | date: "%Y"}}{% endcapture %}
+    {% if year == post_year %}
+        {% include funfeaturedbox.html %}
+    {% endif %}
+    {% endfor %}
+    {% endfor %}
 </div>
