--- a/_includes/aboutblog.html
+++ b/_includes/aboutblog.html
@@ -28,9 +28,9 @@
     </p>
 
     <p>
-      I dedicate this blog to my Gurus, as a sincere token of gratitude to all my tutors who have taught me to fish in the sea of knowledge by introducing me to Physics, Mathematics & Computer Science.<br>
-      And ever since, I've been absorbed in the science that makes you feel like you are magic.<br>
-      This knowledge has taught me patience & helped me solve problems personally & professionally by delving down to the basics, for it educates me to
+      This blog is a sincere token of gratitude to all my tutors who have taught me to fish in the sea of knowledge by introducing me to Physics, Mathematics & Computer Science.<br>
+      And ever since, I've been absorbed in the science, that makes you feel like you are magic.<br>
+      It has helped me solve problems personally & professionally by delving down to the basics, by teaching me to
       <blockquote class="blockquote text-center">
         <p class="mb-0">"Address the root cause and not the symptoms"</p>
       </blockquote>
