--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -15,7 +15,7 @@
             </div>
         </div>
 
-        <p>I'm <a href="{{ author.linkedin }}" class="h5 text-primary">Balajee Thachakkadu Mohan</a>, a "containerholic
+        <p>I'm <a href="{{ author.linkedin }}" class="h5 text-primary">Balajee Thachakkadu Mohan</a>, a "containerholic"
             & a passionate software techy hailing from Bangalore, India.<br>
             <br>
             I love dissecting science & technology to evaluate the nitty gritties & understand the nuances.<br>
