--- a/_layouts/archives.html
+++ b/_layouts/archives.html
@@ -4,16 +4,6 @@ layout: default
 permalink: "/archives.html"
 ---
 
-{% comment %}
-{% assign years = {"2017": 0, "2018": 0, "2019": 0, "2020": 0 } %}
-{% for post in site.posts %}
-{% assign year = page.date | date: "%Y" %}
-{% assign count = years[year] %}
-{% increment count %}
-{% assign year = nil %}
-{% endfor %}
-{% endcomment %}
-
 {% assign years = "" | split: ',' %}
 {% for post in site.posts %}
 {% assign year = post.date | date: "%Y" %}
@@ -43,7 +33,7 @@ permalink: "/archives.html"
             {% endif %}
             {% endfor %}
             <a class="btn btn-dark mr-1" role="button"
-                href="{{site.baseurl}}tags#{{ tag | url_escape | strip | replace: ' ', '-' }}">{{ year }} ({{year_posts.size}})</a>
+                href="{{site.baseurl}}/archives#{{ year | url_escape | strip | replace: ' ', '-' }}">{{ year }} ({{year_posts.size}})</a>
             {% assign year_posts = nil %}
             {% endfor %}
         </div>
@@ -55,7 +45,7 @@ permalink: "/archives.html"
 
     <div class="col-md-12 mt-4">
         <a href="{{site.baseurl}}/year/{{ year }}">
-            <div class="p-2 bg-info text-white h5" id="{{ tag[0] | replace: " ","-" }}">Year |
+            <div class="p-2 bg-info text-white h5" id="{{ year }}">Year |
                 <span>{{year}}</span>
             </div>
         </a>
